[metadata]
name = python_utils
version = 0.0.1
author = Stephen Schleisng
author_email = stephen@schleising.net
description = Useful python utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schleising/python_utils
project_urls =
    Bug Tracker = https://github.com/schleising/python_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src